<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"

            android:layout_marginVertical="@dimen/margin_medium"
            android:text="@string/sign_in"

            android:textAppearance="@style/LabelText" />

        <EditText
            style="@style/StyleRounded.Input"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/BaseText" />

        <EditText
            style="@style/StyleRounded.Input"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/BaseText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/remember"

                android:textAppearance="@style/SmallText" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:background="@color/white"
                android:text="@string/forgot_password"
                android:textAppearance="@style/SmallText"

                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton

            style="@style/StyleRounded.Button"
            android:text="@string/sign_in"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textSize="@dimen/text_button" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_weight="0"
        android:gravity="bottom"
        android:text="@string/just_sign_in"

        android:textAppearance="@style/NoteText" />

</LinearLayout>