<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginVertical="@dimen/margin_medium"
        android:text="@string/sign_in"

        android:textAppearance="@style/LabelText" />

    <EditText
        android:id="@+id/email"
        style="@style/StyleRounded.Input"
        android:layout_below="@id/sign_in"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/BaseText" />

    <EditText
        android:id="@+id/password"
        style="@style/StyleRounded.Input"
        android:layout_below="@id/email"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/BaseText" />

    <LinearLayout
        android:id="@+id/checkboxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginHorizontal="@dimen/margin_normal"

        android:layout_marginTop="@dimen/margin_small">

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:checked="true"
            android:text="@string/remember"

            android:textAppearance="@style/SmallText" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/forgot_password"

            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@color/white"

            android:text="@string/forgot_password"
            android:textAppearance="@style/SmallText"

            />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/checkboxes">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_button"
            style="@style/StyleRounded.Button"
            android:layout_centerInParent="true"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_button" />

    </RelativeLayout>

    <TextView
        android:id="@+id/just_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="bottom"
        android:text="@string/just_sign_in"

        android:textAppearance="@style/NoteText" />

</RelativeLayout>