<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginVertical="@dimen/margin_normal"
        android:text="@string/sign_in"
        android:textAppearance="@style/LabelText"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/email"
        style="@style/StyleRounded.Input"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/BaseText"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in" />

    <EditText
        android:id="@+id/password"
        style="@style/StyleRounded.Input"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/BaseText"
        app:layout_constraintBottom_toTopOf="@id/remember"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <CheckBox
        android:id="@+id/remember"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/remember"
        android:textAppearance="@style/SmallText"
        app:layout_constraintBottom_toTopOf="@id/vertical_guideline"

        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toBottomOf="@id/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_password"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_weight="1"
        android:background="@color/white"

        android:text="@string/forgot_password"
        android:textAppearance="@style/SmallText"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"

        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        style="@style/StyleRounded.Button"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_button"

        app:layout_constraintBottom_toTopOf="@id/just_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vertical_guideline" />


    <TextView
        android:id="@+id/just_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/margin_medium"
        android:gravity="bottom"
        android:text="@string/just_sign_in"
        android:textAppearance="@style/NoteText"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>